added getShopping path
